<resources>
    <string name="app_name">MITRA</string>
    <string name="next">Next</string>
    <string name="country_code">+91</string>
    <string name="phone_hint">Enter phone number</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome_to_mitra">Welcome to MITRA!</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="enter_your_phone_number">Enter phone number you registered with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="didn_t_not_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="error_please_enter_6_digit_otp">Please enter 6 digit OTP</string>
    <string name="name">Name</string>
    <string name="i_am">I am</string>
    <string name="district">District</string>
    <string name="department">Department</string>
    <string name="udise">UDISE</string>
    <string name="more">More</string>
    <string name="i_teach">I Teach</string>
    <string name="less">LESS</string>
    <string name="skills">Skills</string>
    <string name="grade_s">Grade/s</string>
    <string name="subject_s">Subject/s</string>

    <string name="almost_done">Almost done!</string>
    <string name="just_tell_a_little_about_yourself">Just tell a little about yourself</string>
    <string name="grade">Grade</string>
    <string name="required_field">* Required</string>
    <string name="menu_edit">Edit</string>
    <string name="home">Home</string>
    <string name="teaching_aids">Teaching Aids</string>
    <string name="self_learning">Self Learning</string>
    <string name="training_calendar">Training Calendar</string>
    <string name="my_saved_resources">My Saved Resources</string>
    <string name="news_and_circulars">News and Circulars</string>
    <string name="india_code" translatable="false">+91</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="discover_teaching_aids">Discover Teaching Aids</string>
    <string name="learn_something_new">Learn Something New</string>
    <string name="view_available_trainings">View Available Trainings</string>
    <string name="popular_teaching_aids">Popular Teaching Aids</string>
    <string name="popular_self_learning">Popular Self Learning Videos</string>
    <string name="see_all">See All</string>
    <string name="interested_in_learning">I\'m interested in learning</string>
    <string name="similar_resources">Similar Resources</string>
    <string name="view">VIEW</string>
    <string name="save">SAVE</string>
    <string name="classroom_requirements">Classroom requirements</string>
    <string name="select">SELECT</string>
    <string name="default_language">English is your default language. To change visit settings > language</string>
    <string name="my_profile_title">My Profile</string>
    <string name="register_title">Register</string>
    <string name="sign_in_title">Sign In</string>
    <string name="phone_verification_title">Phone Verification</string>
    <string name="done">Done</string>
    <string name="designation_and_district">%1$s from %2$s district</string>
    <string name="otp_sent">OTP sent successfully</string>
    <string name="edit_your_phone_number">Are you sure you want to edit your phone number?</string>
    <string name="loading">Loading..</string>
    <string name="error_enter_required_fields">Please enter required fields.</string>
    <string name="notification">Notifications</string>
    <string name="select_language">Select Language</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="language_select_confirmation">Are you sure you want to select this as default language?</string>
    <string name="delete_saved_resource_confirmation">Are you sure you want to remove this resource from saved resources?</string>
    <string name="topic_s">Topic/s</string>
    <string name="no_subjects">No Subjects</string>
    <string name="no_grades">No Grades</string>
    <string name="no_topics">No Topics</string>
    <string name="profile_updated">Profile updated successfully</string>

    <string name="error_message">Something went wrong. Please try again later.</string>

    <plurals name="resources_saved">
        <item quantity="one">%1$d resource saved</item>
        <item quantity="other">%1$d resources saved</item>
    </plurals>

    <plurals name="training_count">
        <item quantity="one">"%1$d training this month"</item>
        <item quantity="other">"%1$d trainings this month"</item>
    </plurals>

    <string name="share_title" translatable="false">Share via</string>

    <string name="error_user_exists">User already exists. Please sign in.</string>
    <string name="error_please_register">You have not registered yet. Please register first.</string>
    <string name="error_invalid_otp">Invalid OTP</string>
    <string name="choose_profile_photo">Choose profile photo</string>
    <string name="error_relaunch_app">Oops.. There was some problem. Please check your internet connection or relaunch the MITRA app.</string>
    <string name="error_check_internet">Please check your internet connection.</string>
    <string name="error_no_internet">You are not connected to internet. Some functionality might not work.</string>
    <string name="error_permission_denied">Permission denied. Unable to download.</string>
    <string name="message_share">\"Sharing content from Mitra app \"</string>
    <string name="message_no_notifications">No Notifications</string>
    <string name="subject">Subject</string>
    <string name="topic_only">Topic</string>
    <string name="language">Language</string>
    <string name="type">Type</string>
    <string name="school_udise">School UDISE</string>
    <string name="attend">Attend</string>
    <string name="toast_attend">You have signed up to attend %1$s</string>
    <string name="download_file_location">"Downloading file at location %1$s"</string>
    <string name="download_complete">Download Complete</string>
    <string name="no_results">No results found</string>
    <string name="date_from">DATE FROM</string>
    <string name="date_to">DATE TO</string>

    <string name="youtube_save_offline_dialog">You will now be taken to Youtube App. Please click \'Save\' to download the video to your device</string>
    <string name="youtube_offline_available">You are currently offline. This video might be available offline. Go to Youtube App and check Offline Videos to see the video.</string>
    <string name="toast_not_available_offline">File not available offline</string>
    <string name="toast_cannot_open_file">Cannot open file. Try when you are online.</string>
    <string name="not_now">Not now</string>
    <string name="ok">Ok</string>
    <string name="click_to_view">Click to View</string>
    <string name="message_news_share">\"Sharing news circular from Mitra app \"</string>
    <string name="toast_share_news">Downloading PDF to share</string>
    <string name="sign_in_chooser">Have you previously registered on Mitra ?</string>
    <string name="web_client_id" translatable="false">276996264257-c77hctg5nldp3ed7h1b2d7fsa6nvt7ti.apps.googleusercontent.com</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="new_user">No. I am a new user</string>
    <string name="yes_with_phone_number_and_otp">Yes. With phone number and OTP</string>


</resources>
