<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.mavericklabs.mitra.ui.activity.VerifyOtpActivity">

    <EditText
        android:id="@+id/entered_phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_mode_edit_black_24dp"
        android:drawableRight="@drawable/ic_mode_edit_black_24dp"
        android:layout_marginTop="32dp"
        />

    <EditText
        android:id="@+id/otp_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter OTP"
        android:inputType="number"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/entered_phone_number_edit_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/otp_edit_text"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/did_not_receive_otp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_not_receive_otp"
            />

        <Button
            android:id="@+id/resend_otp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorAccent"
            android:text="@string/resend_otp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        >
        <TextView
            android:id="@+id/have_an_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/primary_text"
            />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>

</RelativeLayout>
