<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * ************************************************************************
  ~  *
  ~  *  MAVERICK LABS CONFIDENTIAL
  ~  *  __________________
  ~  *
  ~  *   [2015] Maverick Labs
  ~  *   All Rights Reserved.
  ~  *
  ~  *  NOTICE:  All information contained herein is, and remains
  ~  *  the property of Maverick Labs and its suppliers,
  ~  *  if any.  The intellectual and technical concepts contained
  ~  *  herein are proprietary to Maverick Labs
  ~  *  and its suppliers and may be covered by U.S. and Foreign Patents,
  ~  *  patents in process, and are protected by trade secret or copyright law.
  ~  *  Dissemination of this information or reproduction of this material
  ~  *  is strictly forbidden unless prior written permission is obtained
  ~  *  from Maverick Labs.
  ~  * /
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_gravity="center"
    android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_chooser"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            />

        <Button
            android:id="@+id/not_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_below="@+id/title"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:id="@+id/phone_number_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_with_phone_number_and_otp"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/not_registered"
            android:layout_marginTop="16dp"
            />

</RelativeLayout>