<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_sign_in_or_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.mavericklabs.mitra.ui.activity.ChooseSignInOrRegisterActivity">

    <include
        layout="@layout/centered_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sign_in_or_regsiter_background"
        android:scaleType="centerCrop"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparentWhite"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/welcome_to_mitra_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_mitra"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                />

            <Button
                android:id="@+id/select_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/welcome_to_mitra_title"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/select_regsiter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_below="@id/select_sign_in_button"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/colorAccent"
                />

        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>
