<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_accept_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.mavericklabs.mitra.ui.activity.AcceptUserInfoActivity">

    <ImageView
        android:id="@+id/profile_photo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/scert_logo"
        />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo_image_view"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:drawableRight="@android:drawable/ic_menu_manage"
        android:drawableEnd="@android:drawable/ic_menu_manage"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_edit_text"
        android:layout_marginTop="16dp"
        android:id="@+id/i_am_layout"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        >

        <TextView
            android:id="@+id/i_am_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/i_am_text_view"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/i_am_text_view"
            />
    </RelativeLayout>

    <View
        android:id="@+id/i_am_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/i_am_layout"
        android:background="@color/secondary_text"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_am_layout"
        android:layout_marginTop="24dp"
        android:id="@+id/district_layout"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        >

        <TextView
            android:id="@+id/district_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:textSize="18sp"
            android:textColor="@color/primary_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/district_text_view"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/district_text_view"
            />
    </RelativeLayout>

    <View
        android:id="@+id/district_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/district_layout"
        android:background="@color/secondary_text"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        />

</RelativeLayout>
