<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * ************************************************************************
  ~  *
  ~  *  MAVERICK LABS CONFIDENTIAL
  ~  *  __________________
  ~  *
  ~  *   [2015] Maverick Labs
  ~  *   All Rights Reserved.
  ~  *
  ~  *  NOTICE:  All information contained herein is, and remains
  ~  *  the property of Maverick Labs and its suppliers,
  ~  *  if any.  The intellectual and technical concepts contained
  ~  *  herein are proprietary to Maverick Labs
  ~  *  and its suppliers and may be covered by U.S. and Foreign Patents,
  ~  *  patents in process, and are protected by trade secret or copyright law.
  ~  *  Dissemination of this information or reproduction of this material
  ~  *  is strictly forbidden unless prior written permission is obtained
  ~  *  from Maverick Labs.
  ~  * /
  ~  */
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/faded_background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        >


        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:useCompatPadding="true"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    app:backgroundTint="@color/colorAccent_light"
                    android:src="@drawable/ic_bookmark_black_18dp"/>

                <Button
                    android:id="@+id/my_resources_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_saved_resources"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:useCompatPadding="true"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_school_black_18dp"/>

                <Button
                    android:id="@+id/teaching_aids_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teaching_aids"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:useCompatPadding="true"
                    app:backgroundTint="@color/colorAccent_dark"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_subscriptions_black_18dp" />

                <Button
                    android:id="@+id/self_learning_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/self_learning"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:useCompatPadding="true"
                    app:backgroundTint="@color/color_teal_light"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:src="@drawable/ic_date_range_black_18dp"/>

                <Button
                    android:id="@+id/trainings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training_calendar"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_explore_white_24dp" />

</android.support.design.widget.CoordinatorLayout>